[package]
name = "dg_xch_tests"
version = "1.2.1"
edition = "2021"
authors = ["James Hoerr"]
description = "Low Level Support Package for dg_xch_utils"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/dg_xch_utils"
repository = "https://github.com/GalactechsLLC/dg_xch_utils/serialize"

[dependencies]
async-trait = "0.1.74"
blst = "0.3.11"
bytes = "1.5.0"
dg_xch_core = {path = "../core", version = "1.2.1", features = ["paperclip"] }
dg_xch_cli = {path = "../cli", version="1.2.1"}
dg_xch_clients = {path = "../clients", version="1.2.1"}
dg_xch_keys = {path = "../keys", version="1.2.1"}
dg_xch_macros = {path = "../macros", version="1.2.1"}
dg_xch_pos = {path = "../proof_of_space", version="1.2.1"}
dg_xch_puzzles = {path = "../puzzles", version="1.2.1"}
dg_xch_serialize = {path = "../serialize", version="1.2.1"}
futures-util = "0.3.29"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.20"
num-bigint = "0.4.4"
num-integer = "0.1.45"
num-traits = "0.2.17"
sha2 = "0.10.8"
simple_logger = "4.3.0"
tokio = {version = "1.34.0", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net"]}
uuid = {version="1.6.1", features=["v4"]}