[package]
name = "dg_xch_tests"
version = "2.1.3"
edition = "2021"
authors = ["James Hoerr"]
description = "Low Level Support Package for dg_xch_utils"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/dg_xch_utils"
repository = "https://github.com/GalactechsLLC/dg_xch_utils/serialize"

[dependencies]
async-trait = "0.1.77"
dg_xch_core = {path = "../core", version = "2.1.3" }
dg_xch_clients = {path = "../clients", version="2.1.3"}
dg_xch_puzzles = {path = "../puzzles", version="2.1.3"}
dg_xch_serialize = {path = "../serialize", version="2.1.3"}
hex = "0.4.3"
lazy_static = "1.4.0"
num-bigint = "0.4.4"
num-traits = "0.2.17"
tokio = {version = "1.35.1", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net"]}
uuid = {version="1.7.0", features=["v4"]}
paste = "1.0.15"
serde_json = "1.0.133"
serde = "1.0.210"